<resources>
    <string name="app_name">Just Java</string>
    <string name="name_hint">Name</string>
    <string name="toppings_header">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity_header">Quantity</string>
    <string name="submit_order">Order</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="thank_you">Thank you!</string>
</resources>
